--- a/index.html
+++ b/index.html
@@ -58,6 +58,39 @@
             </a>
         </div>
     </div>
-  </section>  
+  </section>
+  
+  <section id="about">
+    <div class="background-about">
+        <div class="img-wrapper">
+            <img src="aula-portfolio/img.3.jpg" alt="img3-notebook">
+        </div>
+    </div>
+
+    <div class="box-about">
+        <div class="section-subtitle">
+            <h2>
+                <p>💻</p>
+                <p><span>Estudante</span>de Análise e Desenvolvimento de Sistemas</p>
+            </h2>
+        </div>
+        <h3>
+            Sou um estudante de ADS com experiência em:
+            <p>HTML, CSS e JavaScript</p>
+        </h3>
+        <h4>
+            Meu nome é Victor Maciel, tenho 24 anos. Sou entusiasmado pela área de tecnologia e desenvolvimento web, e acredito que minha paixão pela programação, combinada com minhas habilidades técnicas, tornam-me um candidato ideal para essa posição. 
+        </h4>
+        <h4>
+            Atualmente, estou cursando Análise e Desenvolvimento de Sistema na faculdade Descomplica, onde tenho adquirido conhecimentos sólidos em desenvolvimento web, linguagens como HTML, CSS e JavaScript. Também tenho familiaridade com bancos de dados e SQL, bem como com versionamento de código usando Git.
+        </h4>
+        <h5>
+            Abaixo está o meu <p>currículo</p> para download.
+        </h5>
+        <div class="button-cta">
+            <button>Currículo</button>
+        </div>
+    </div>
+  </section>
 </body>
 </html>
