--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
     <title>Portifólio - Victor Maciel</title>
 </head>
 
 <body>
+    <!--Person-->
   <section id="person">
     <div class="person-content">
         <div class="person-name">
@@ -59,7 +61,9 @@
         </div>
     </div>
   </section>
-  
+  <!--End Person-->
+
+   <!--About-->
   <section id="about">
     <div class="background-about">
         <div class="img-wrapper">
@@ -75,22 +79,51 @@
             </h2>
         </div>
         <h3>
-            Sou um estudante de ADS com experiência em:
+            Sou um estudante de ADS com experiência em
             <p>HTML, CSS e JavaScript</p>
         </h3>
         <h4>
-            Meu nome é Victor Maciel, tenho 24 anos. Sou entusiasmado pela área de tecnologia e desenvolvimento web, e acredito que minha paixão pela programação, combinada com minhas habilidades técnicas, tornam-me um candidato ideal para essa posição. 
+            Meu nome é Victor Maciel, tenho 24 anos. Sou entusiasmado pela área de tecnologia e desenvolvimento web. 
         </h4>
         <h4>
             Atualmente, estou cursando Análise e Desenvolvimento de Sistema na faculdade Descomplica, onde tenho adquirido conhecimentos sólidos em desenvolvimento web, linguagens como HTML, CSS e JavaScript. Também tenho familiaridade com bancos de dados e SQL, bem como com versionamento de código usando Git.
         </h4>
-        <h5>
+        <h4>
             Abaixo está o meu <p>currículo</p> para download.
-        </h5>
+        </h4>
         <div class="button-cta">
             <button>Currículo</button>
         </div>
     </div>
   </section>
+   <!--End About-->
+
+   <section id="projects">
+    <div class="projects-title">
+        <h2>PROJETOS 🧩</h2>
+    </div>
+
+    <div class="wrapper-projects">
+        <div class="card-project">
+            <div class="content-project">
+                <div class="image-project">
+                <img src="aula-portfolio/dartvader.jpg" alt="img-darthvader">
+                </div>
+                <span>Em construção</span>
+                <p>Em breve terá um excelente projeto aqui</p>
+                <div class="cta-project">
+                    <a href="/">
+                        Código
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="/">
+                        Site
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
