--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   </section>
    <!--End About-->
 
+   <!-- Projects -->
    <section id="projects">
     <div class="projects-title">
         <h2>PROJETOS 🧩</h2>
@@ -107,10 +108,12 @@
         <div class="card-project">
             <div class="content-project">
                 <div class="image-project">
+                    <a href="/">
                 <img src="aula-portfolio/dartvader.jpg" alt="img-darthvader">
+                    </a>
                 </div>
                 <span>Em construção</span>
-                <p>Em breve terá um excelente projeto aqui</p>
+                <p>Em breve terá um excelente projeto aqui.</p>
                 <div class="cta-project">
                     <a href="/">
                         Código
@@ -121,6 +124,76 @@
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
                 </div>
+            </div>
+        </div>
+        <div class="card-project">
+            <div class="content-project">
+                <div class="image-project">
+                    <a href="/">
+                <img src="aula-portfolio/dartvader2.jpg" alt="img-darthvader2">
+                    </a>
+                </div>
+                <span>Em construção</span>
+                <p>Em breve terá um excelente projeto aqui.</p>
+                <div class="cta-project">
+                    <a href="/">
+                        Código
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="/">
+                        Site
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="card-project">
+            <div class="content-project">
+                <div class="image-project">
+                    <a href="/">
+                <img src="aula-portfolio/dartvader3.jpg" alt="img-darthvader3">
+                    </a>
+                </div>
+                <span>Em construção</span>
+                <p>Em breve terá um excelente projeto aqui.</p>
+                <div class="cta-project">
+                    <a href="/">
+                        Código
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="/">
+                        Site
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
+   <!-- End Projects -->
+
+   <section id="contacts">
+    <div class="contact-icon-content">
+        <h2>Contato 📞</h2>
+    </div>
+    <div class="contact-icons-wrapper">
+        <div class="contact-icon-content">
+            <div class="contact-icon">
+                <i class="fa-solid fa-map-location-dot"></i>
+            </div>
+            <div class="contact-info">
+                <span>Localização</span>
+                <p>Rio de Janeiro, Brasil</p>
+            </div>
+        </div>
+    
+        <div class="contact-icon-content">
+            <div class="contact-icon">
+                <i class="fa-solid fa-envelope-open-text"></i>
+            </div>
+            <div class="contact-info">
+                <span>E-mail</span>
+                <a href="/">victormaciel.dev@gmail.com</a>
             </div>
         </div>
     </div>
