--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <section id="header">
+        <a class="header-title" href="/">
+            <h1>
+                Victor Maciel
+            </h1>
+        </a>
+        
+        <nav class="navbar">
+            <ul>
+                <li><a href="#person">Home</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#contacts">Contatos</a></li>
+            </ul>
+        </nav>
+
+    </section>
+    <!-- End Header -->
+
     <!--Person-->
   <section id="person">
     <div class="person-content">
