--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Victor Maciel
             </h1>
         </a>
-        
+
         <nav class="navbar">
             <ul>
                 <li><a href="#person">Home</a></li>
@@ -218,5 +218,15 @@
         </div>
     </div>
    </section>
+   <!-- Footer -->
+   <section id="footer">
+    <div class="container-footer">
+        <h2>Feito com ❤️ por</h2>
+        <h3>Victor Maciel © 2023 </h3>
+    </div>
+   </section>
+   <!-- End Footer -->
+
+   <script src="scripts.js"></script>
 </body>
 </html>
