--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
             Abaixo está o meu <p>currículo</p> para download.
         </h4>
         <div class="button-cta">
-            <button>Currículo</button>
+            <a href="public/document/Profissional curriculo 2.pdf" download="CV-Victor-Maciel" aria-label="Baixar currículo Victor Maciel">
+                Currículo</a>
         </div>
     </div>
   </section>
@@ -130,7 +131,7 @@
             <div class="swiper-slide card-project">
                 <div class="image-project">
                     <a href="/">
-                <img src="aula-portfolio/dartvader.jpg" alt="img-darthvader">
+                <img src="aula-portfolio/dartvader2.jpg" alt="img-darthvader">
                     </a>
                 </div>
                 <span>Em construção</span>
@@ -149,7 +150,7 @@
             <div class="swiper-slide card-project">
                 <div class="image-project">
                     <a href="/">
-                <img src="aula-portfolio/dartvader2.jpg" alt="img-darthvader">
+                <img src="aula-portfolio/dartvader.jpg" alt="img-darthvader">
                     </a>
                 </div>
                 <span>Em construção</span>
