--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
             <div class="contact-info">
                 <span>E-mail</span>
-                <a href="/">victormaciel.dev@gmail.com</a>
+                <a href="mailto:victormaciel.dev@gmail.com">victormaciel.dev@gmail.com</a>
             </div>
         </div>
     </div>
