--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             Abaixo está o meu <p>currículo</p> para download.
         </h4>
         <div class="button-cta">
-            <a href="public/document/CV-Victor Maciel.pdf" download="CV-Victor-Maciel" aria-label="Baixar currículo Victor Maciel">
+            <a href="public/CV-Victor Maciel.pdf" download="CV-Victor-Maciel" aria-label="Baixar currículo Victor Maciel">
                 Currículo</a>
         </div>
     </div>
