--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
             <div class="swiper-slide card-project">
                 <div class="image-project">
                     <a href="/">
-                <img src="aula-portfolio/dartvader2.jpg" alt="img-darthvader">
+                <img src="projetos/pokedex.png" alt="Pokedex">
                     </a>
                 </div>
-                <span>Em construção</span>
-                <p>Em breve terá um excelente projeto aqui.</p>
+                <span>Pokedex</span>
+                <p>Projeto para treinar skills de HTML, CSS e JS.</p>
                 <div class="cta-project">
-                    <a href="/">
+                    <a href="https://github.com/uBruxo/Pokedex">
                         Código
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="/">
+                    <a href="https://tourmaline-paletas-41a518.netlify.app/">
                         Site
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
