--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                 <span>Pokedex</span>
                 <p>Projeto para treinar skills de HTML, CSS e JS.</p>
                 <div class="cta-project">
-                    <a href="https://github.com/uBruxo/Pokedex">
+                    <a href="https://github.com/uBruxo/Pokedex" target="_blank">
                         Código
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://tourmaline-paletas-41a518.netlify.app/">
+                    <a href="https://tourmaline-paletas-41a518.netlify.app/" target="_blank">
                         Site
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
