--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                         </div>
                     </li>
                 </ul>
+                <ul>
+                    <li>
+                        <div data="Py">
+                        <img src="aula-portfolio/python2.svg" alt="Py-icon">
+                        </div>
+                    </li>
+                </ul>
             </div>
     
         </div>
@@ -101,13 +108,13 @@
         </div>
         <h3>
             Sou um estudante de ADS com experiência em
-            <p>HTML, CSS e JavaScript</p>
+            <p>HTML, CSS, JavaScript e Python</p>
         </h3>
         <h4>
             Meu nome é Victor Maciel, tenho 24 anos. Sou entusiasmado pela área de tecnologia e desenvolvimento web. 
         </h4>
         <h4>
-            Atualmente, estou cursando Análise e Desenvolvimento de Sistema na faculdade Descomplica, onde tenho adquirido conhecimentos sólidos em desenvolvimento web, linguagens como HTML, CSS e JavaScript. Também tenho familiaridade com bancos de dados e SQL, bem como com versionamento de código usando Git.
+            Atualmente, estou cursando Análise e Desenvolvimento de Sistema na faculdade Descomplica, onde tenho adquirido conhecimentos sólidos em desenvolvimento web, linguagens como HTML, CSS, JavaScript e Python. Também tenho familiaridade com bancos de dados e SQL, bem como com versionamento de código usando Git.
         </h4>
         <h4>
             Abaixo está o meu <p>currículo</p> para download.
