--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="/">
+                    <a href="https://github.com/uBruxo/Pokedex">
                 <img src="projetos/pokedex.png" alt="Pokedex">
                     </a>
                 </div>
@@ -156,18 +156,18 @@
             </div>
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="/">
-                <img src="aula-portfolio/dartvader.jpg" alt="img-darthvader">
+                    <a href="https://github.com/uBruxo/Previsao-do-tempo">
+                <img src="previsão-tempo.png" alt="previsao-tempo">
                     </a>
                 </div>
-                <span>Em construção</span>
-                <p>Em breve terá um excelente projeto aqui.</p>
+                <span>Previsão do tempo</span>
+                <p>Projeto para treinar implementação de API.</p>
                 <div class="cta-project">
-                    <a href="/">
+                    <a href="https://github.com/uBruxo/Previsao-do-tempo">
                         Código
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="/">
+                    <a href="https://main--frabjous-empanada-0cb74d.netlify.app/">
                         Site
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
