--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <img class="profile-photo" src="" alt="">
         </div>
         <div class="links">
-            <a href="https://github.com/uBruxo" target="_blank">
+            <a href="https://github.com/Victormaciel25" target="_blank">
             <img src="aula-portfolio/logo-github.svg" alt="icon-github">
             </a>
             <a href="https://www.linkedin.com/in/victor-maciel-26451327a/" target="_blank">
@@ -145,7 +145,7 @@
                 <span>Site Android</span>
                 <p>Construção de um site responsivo.</p>
                 <div class="cta-project">
-                    <a href="https://github.com/uBruxo/Responsivo-Android" target="_blank">
+                    <a href="https://github.com/Victormaciel25/Responsivo-Android" target="_blank">
                         Código
                         <i class="fa-brands fa-github"></i>
                     </a>
@@ -176,14 +176,14 @@
             </div>
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="https://github.com/uBruxo/Previsao-do-tempo">
+                    <a href="https://github.com/Victormaciel25/Previsao-do-tempo">
                 <img src="previsão-tempo.png" alt="previsao-tempo">
                     </a>
                 </div>
                 <span>Previsão do tempo</span>
                 <p>Projeto para treinar implementação de API.</p>
                 <div class="cta-project">
-                    <a href="https://github.com/uBruxo/Previsao-do-tempo" target="_blank">
+                    <a href="https://github.com/Victormaciel25/Previsao-do-tempo" target="_blank">
                         Código
                         <i class="fa-brands fa-github"></i>
                     </a>
