--- a/index.html
+++ b/index.html
@@ -120,9 +120,15 @@
         <h4>
             Abaixo está o meu <p>currículo</p> para download.
         </h4>
-        <div class="button-cta">
-            <a href="public/document/CV-Victor-Maciel.pdf" download="CV-Victor-Maciel" aria-label="Baixar currículo Victor Maciel">
-                Currículo</a>
+        <div>
+            <div class="button-cta">
+                <a href="public/document/CV-Victor-Maciel.pdf" download="CV-Victor-Maciel-PT" aria-label="Baixar currículo Victor Maciel">
+                    Currículo - PT</a>
+            </div>
+            <div class="button-cta">
+                <a href="public/document/Cv-english.pdf" download="CV-Victor-Maciel-EN" aria-label="Baixar currículo Victor Maciel">
+                    Resume - EN</a>
+            </div>
         </div>
     </div>
   </section>
