--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
             <div class="swiper-slide card-project">
                 <div class="image-project">
                     <a href="/">
+                <img src="projetos/Milan-automoveis.png" alt="Milan-automoveis">
+                    </a>
+                </div>
+                <span class="projeto1">Site de venda</span>
+                <p>Construção de um site aprimorar skills de HTML e CSS.</p>
+                <div class="cta-project">
+                    <a href="https://github.com/Victormaciel25/Milan-automoveis" target="_blank">
+                        Código
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://milan-automoveis.netlify.app" target="_blank">
+                        Site
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="swiper-slide card-project">
+                <div class="image-project">
+                    <a href="/">
                 <img src="projetos/Site-android.png" alt="Site android">
                     </a>
                 </div>
