--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="/">
+                    <a href="https://milan-automoveis.netlify.app" target="_blank">
                 <img src="projetos/Milan-automoveis.png" alt="Milan-automoveis">
                     </a>
                 </div>
@@ -163,7 +163,7 @@
             </div>
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="/">
+                    <a href="https://jade-longma-ce3802.netlify.app" target="_blank">
                 <img src="projetos/Site-android.png" alt="Site android">
                     </a>
                 </div>
@@ -182,18 +182,18 @@
             </div>
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="https://github.com/uBruxo/Pokedex" target="_blank">
-                <img src="projetos/pokedex.png" alt="Pokedex">
+                    <a href="https://spectacular-lamington-038e15.netlify.app/" target="_blank">
+                <img src="projetos/IMC.png" alt="CalculadoraIMC">
                     </a>
                 </div>
-                <span>Pokedex</span>
+                <span>Calculadora de IMC</span>
                 <p>Projeto para treinar skills de HTML, CSS e JS.</p>
                 <div class="cta-project">
-                    <a href="https://github.com/uBruxo/Pokedex" target="_blank">
+                    <a href="https://github.com/Victormaciel25/CalculadoraIMC" target="_blank">
                         Código
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://tourmaline-paletas-41a518.netlify.app/" target="_blank">
+                    <a href="https://spectacular-lamington-038e15.netlify.app/" target="_blank">
                         Site
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </a>
@@ -201,7 +201,7 @@
             </div>
             <div class="swiper-slide card-project">
                 <div class="image-project">
-                    <a href="https://github.com/Victormaciel25/Previsao-do-tempo">
+                    <a href="https://main--frabjous-empanada-0cb74d.netlify.app/">
                 <img src="previsão-tempo.png" alt="previsao-tempo">
                     </a>
                 </div>
