--- a/index.html
+++ b/index.html
@@ -144,6 +144,25 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide card-project">
                 <div class="image-project">
+                    <a href="https://sunny-pavlova-992368.netlify.app/" target="_blank">
+                <img src="projetos/beats.png" alt="Beats">
+                    </a>
+                </div>
+                <span class="projeto1">Landing page</span>
+                <p>Construção de um site responsivo em HTML, CSS e JavaScript.</p>
+                <div class="cta-project">
+                    <a href="https://github.com/Victormaciel25/responsive-headphones" target="_blank">
+                        Código
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://sunny-pavlova-992368.netlify.app/" target="_blank">
+                        Site
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="swiper-slide card-project">
+                <div class="image-project">
                     <a href="https://milan-automoveis.netlify.app" target="_blank">
                 <img src="projetos/Milan-automoveis.png" alt="Milan-automoveis">
                     </a>
