--- a/index.html
+++ b/index.html
@@ -108,27 +108,30 @@
             </h2>
         </div>
         <h3>
-            Sou um estudante de ADS com experiência em
             <p>HTML, CSS, JavaScript e Python</p>
         </h3>
         <h4>
-            Meu nome é Victor Maciel, tenho 24 anos. Sou entusiasmado pela área de tecnologia e desenvolvimento web. 
+            Meu nome é Victor Maciel, tenho 25 anos.
         </h4>
         <h4>
-            Atualmente, estou cursando Análise e Desenvolvimento de Sistema na faculdade Descomplica, onde tenho adquirido conhecimentos sólidos em desenvolvimento web, linguagens como HTML, CSS, JavaScript e Python. Também tenho familiaridade com bancos de dados e SQL, bem como com versionamento de código usando Git.
+            Sou estudante de Análise e desenvolvimento de sistemas com ótimo desempenho acadêmico e grande
+disposição para o aprendizado. Capaz de oferecer um serviço de qualidade por meio de conhecimentos
+práticos e boas habilidades interpessoais, visando o desenvolvimento profissional.
         </h4>
         <h4>
             Abaixo está o meu <p>currículo</p> para download.
         </h4>
         <div>
             <div class="button-cta">
-                <a href="public/document/CV-Victor-Maciel.pdf" download="CV-Victor-Maciel-PT" aria-label="Baixar currículo Victor Maciel">
-                    Currículo - PT</a>
+                <a href="public/document/Currículo-VictorMaciel.pdf" download="CV-Victor-Maciel" aria-label="Baixar currículo Victor Maciel">
+                Currículo</a>
             </div>
-            <div class="button-cta">
+            <!--
+                <div class="button-cta">
                 <a href="public/document/Cv-english.pdf" download="CV-Victor-Maciel-EN" aria-label="Baixar currículo Victor Maciel">
                     Resume - EN</a>
             </div>
+            -->
         </div>
     </div>
   </section>
