--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@ práticos e boas habilidades interpessoais, visando o desenvolvimento profission
             <div class="swiper-slide card-project">
                 <div class="image-project">
                     <a href="https://sunny-pavlova-992368.netlify.app/" target="_blank">
+                <img src="projetos/inventario-domestico.png" alt="Beats">
+                    </a>
+                </div>
+                <span class="projeto1">Inventário doméstico</span>
+                <p>Sistema de inventário utilizando a biblioteca tkinter do python e banco de dados.</p>
+                <div class="cta-project">
+                    <a href="https://github.com/Victormaciel25/Sistema-de-cadastro" target="_blank">
+                        Código
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="swiper-slide card-project">
+                <div class="image-project">
+                    <a href="https://sunny-pavlova-992368.netlify.app/" target="_blank">
                 <img src="projetos/beats.png" alt="Beats">
                     </a>
                 </div>
